--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(ClassComplex)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(ClassComplex main.cpp complex_num.h complex_num.cpp rational.h rational.cpp)
+add_executable(ClassComplex main.cpp complex_num.h complex_num.cpp rational.h rational.cpp catch.hpp big_integers.h big_integers.cpp)
